# sysv-semaphore

./: .gitignore  .npmignore  .prettierrc.js  Dockerfile  LICENSE  OSX.i  README.md  binding.gyp  eslint.config.js  index.js  jest.config.js  package-lock.json  package.json
.husky/: pre-push
debug/: sem-posix.js  sem-sysv.js  try-error.js
gtest/: CMakeLists.txt
prebuilds/darwin-arm64/: sysv-semaphore.node
prebuilds/darwin-x64/: sysv-semaphore.node
prebuilds/linux-amd64/: sysv-semaphore.node
scripts/: build-linux.sh  clean.sh  gtest.sh  install-gtest.sh  prebuild-linux.sh  run-gtest.sh
src/: OSX.i  errnoname.hpp  error.cpp  error.h  flock.cpp  flock.h  flock.test.js  main.cpp  main.i  mock_syscalls.c  mock_syscalls.cpp  mock_syscalls.h  mock_syscalls.hpp  mock_syscalls.test.cpp  mode.cpp  mode.h  semaphore-posix.cpp  semaphore-posix.h  semaphore-posix.test.js  semaphore-sysv.cpp  semaphore-sysv.h  semaphore-sysv.test.cpp  semaphore-sysv.test.js  semaphore.cpp  semaphore.h  semaphore.test.js  token.cpp  token.h
src/errnoname/: README.md
src/mock/: syscalls.cpp  syscalls.test.cpp
test/: flock-child.js  flock.test.js  jest-matchers.js  parent.js  semaphore-child.js  semaphore-posix-child.js  semaphore-posix.test.js  semaphore-sysv-child.js  semaphore-sysv.test.js
tests/gtest/: CMakeLists.txt
